tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/AbstractErrorReportingTests#setUpSuite().mjava
	@BeforeList
	public void setUpSuite() throws Exception {
		project = TestUtils.createProject("ErrorReportingTests");
		ResourcesPlugin.getWorkspace().getRoot().getProject(getPHPVersion() + "ErrorReportingTests");
		for (final String fileName : fileNames) {
			PdttFile pdttFile = new PdttFile(fileName);
			pdttFiles.put(fileName, pdttFile);
			files.put(fileName, createFile(pdttFile.getFile().trim()));
			for (String otherFile : pdttFile.getOtherFiles()) {
				createFile(otherFile.trim());
			}
		}
		TestUtils.setProjectPHPVersion(project, getPHPVersion());
		// Perform full build to trigger errors check
		project.build(IncrementalProjectBuilder.FULL_BUILD, null);
		TestUtils.waitForIndexer();
		TestUtils.waitForAutoBuild();
	}

